# mdof

./: .buildinfo  .gitattributes  .gitignore  Bernardino.ipynb  CITATION.cff  LICENSE.txt  Makefile  OKID.py  OKID_ERA_DC.ipynb  README.ipynb  README.md  SRIM.ipynb  SRIM.py  SupportVariation.ipynb  TransferFunction.ipynb  __ExtractModes.py  __SRIM.py  biinary.py  genindex.html  index.html  literature.yaml  matplotlibrc  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  sitemap.xml
.github/workflows/: test.yml
CESMD/CE89324/: metadata.json
_build/doctrees/: environment.pickle  index.doctree
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/latex/: mdof.aux  mdof.fdb_latexmk  mdof.fls  mdof.idx  mdof.out  mdof.tex  mdof.toc
_sources/: index.rst.txt
_sources/api/: index.rst.txt  markov.rst.txt  realize.rst.txt  (+1 more)
_static/: documentation_options.js
api/: index.html  markov.html  modes.html  realize.html  system.html
assets/: brace2.mplstyle
binder/: requirements.txt
docs/: conf.py
doctrees/: index.doctree
examples/: 00_Overview.html  00_Overview.ipynb  00_Overview_SIMO copy.html  00_Overview_SIMO.html  01_SISO_Exercise.ipynb  01_SISO_Intro.html  02_SISO_Event.html  02_SISO_Event.ipynb  03_SISO_History.html  03_SISO_History.ipynb  03_SISO_History_Archive.html  04_MIMO_Intro.html  04_MIMO_Intro.ipynb  04_SIMO_Event.html  04_SIMO_Event.ipynb  05_MIMO_Event.html  05_MIMO_Intro.html  06_MIMO_History.html  README.html  README.ipynb  impulse_response_studies.html  impulse_response_studies.ipynb  index.html  juang_experiment.html  transfer_function.html  transfer_function.ipynb
html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
notebooks/: 00_Overview.ipynb  00_Overview_SIMO.ipynb  01_SISO_Exercise.ipynb  01_SISO_Intro.ipynb  01_SISO_Noise.ipynb  02_SISO_Event.ipynb  03_SISO_History.ipynb  04_MIMO_Intro.ipynb  04_SIMO_Event.ipynb  05_MIMO_Event.ipynb  06_MIMO_History.ipynb  2dof.ipynb  OKID_ERA_DC.ipynb  README.ipynb  README.md  ResponseSpectrum.ipynb  SRIM.ipynb  impulse_response_studies.ipynb  requirements.txt  ssid_demo.ipynb
site/: .buildinfo  CNAME  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sitemap.xml
ssid/: __init__.py  integrate.py  okid.py  srim.py
studies/: 06_MIMO_History_All_CGS_Motions.ipynb  2dof.ipynb  CESMDBridges.ipynb  CESMDBridges.json  Meloland.ipynb  PeakPicking.ipynb  PlatformHistory.ipynb  ProfileSVD.ipynb  SRIM.ipynb  SupportVariation.ipynb  database9.json  databasetransfer.json  impulse_response_studies.ipynb  matlab_functions.ipynb  rank_bridges_by_1st_period.ipynb
tests/: FDD_PP.py  era_dataset.ipynb  era_example.ipynb  era_testing.ipynb  inputs_fdd.py  myshakedata.csv  si_example.ipynb  ssid_demo.ipynb  state_space_studies.ipynb  system_id_studies.ipynb  system_id_summary.ipynb  test1.py  test_basics.py  test_events.py  test_realization.py  test_srim.sh  time_history_studies.ipynb
theory/: era.html  index.html  modes.html  okid.html  srim.html  srim.html.bak  statespace.html
(+583 files in other folders)
